--- a/src/components/Generate/qrCodeGenerator.module.css
+++ b/src/components/Generate/qrCodeGenerator.module.css
@@ -11,12 +11,13 @@
 }
 
 .input {
-    margin-top: 30px;
+    margin-top: 3rem;
     border-radius: 5px;
     border: .5px solid black;
     color: #0f0f0f;
     background: white;
-    width: 400px;
+    width: 500px;
+    max-width: 90vw;
     height: 50px;
     padding: 8px 16px;
     font-size: 32px;
