--- a/src/components/History/history.module.css
+++ b/src/components/History/history.module.css
@@ -1,4 +1,7 @@
 .container {
+    max-height: calc(97vh - 4rem);
+    overflow-y: auto;
+    margin-top: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,6 +14,8 @@
     padding-left: 5px;
 }
 
-.header {
-    margin-top: 2rem;
+@media (max-width: 768px) {
+    .container {
+        max-height: calc(97vh - 11rem);
+    }
 }
