--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,5 +1,26 @@
 .container {
     display: flex;
+    height: 2rem;
     justify-content: center;
+    margin-bottom: 1rem;
     gap: 10px;
+}
+
+.item {
+    padding: 4px;
+}
+
+.item.active {
+    text-decoration: none;
+    cursor: default;
+    color: white;
+    background: blue;
+}
+
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+        height: 9rem;
+    }
 }
