--- a/src/components/Generate/qrCodeGenerator.module.css
+++ b/src/components/Generate/qrCodeGenerator.module.css
@@ -17,7 +17,6 @@
     color: #0f0f0f;
     background: white;
     width: 500px;
-    max-width: 90vw;
     height: 50px;
     padding: 8px 16px;
     font-size: 32px;
@@ -31,3 +30,10 @@
     border-radius: 16px;
     padding: 8px 16px;
 }
+
+@media (max-width: 768px) {
+    .input {
+        width: 85vw;
+    }
+}
+
