--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,9 +1,9 @@
 .container {
     display: flex;
-    height: 2rem;
     justify-content: center;
     margin-bottom: 1rem;
     gap: 10px;
+    width: 100%;
 }
 
 .item {
@@ -21,6 +21,5 @@
     .container {
         flex-direction: column;
         align-items: center;
-        height: 9rem;
     }
 }
