--- a/src/components/Generate/qrCodeGenerator.module.css
+++ b/src/components/Generate/qrCodeGenerator.module.css
@@ -17,6 +17,7 @@
     color: #0f0f0f;
     background: white;
     width: 500px;
+    max-width: 85%;
     height: 50px;
     padding: 8px 16px;
     font-size: 32px;
@@ -30,10 +31,3 @@
     border-radius: 16px;
     padding: 8px 16px;
 }
-
-@media (max-width: 768px) {
-    .input {
-        width: 85vw;
-    }
-}
-
