--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -17,9 +17,14 @@
     background: blue;
 }
 
-@media (max-width: 768px) {
+/*@media (max-width: 768px) {
     .container {
         flex-direction: column;
         align-items: center;
     }
+}*/
+
+.container.mobile {
+    flex-direction: column;
+    align-items: center;
 }
